--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,41 @@
 
 // HEADER STYLE 
 
+#header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    background-color: black;
+
+    .logo {
+        color: red;
+        font-size: large;
+    }
+
+    form {
+        display: flex;
+        gap: 10px;
+        padding: 30px;
+
+        input {
+            padding: 5px;
+        }
+
+        button {
+            padding: 5px;
+            border: 2px red solid;
+
+            &:hover {
+                background-color: rgba(255, 0, 0, 0.345);
+                color: white;
+                
+            }
+        }
+    }
+
+}
+
 
 
 // MAIN STYLE
