--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,7 +22,7 @@
         font-size: large;
     }
 
-    form {
+    .search-bar {
         display: flex;
         gap: 10px;
         padding: 30px;
