--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -33,10 +33,12 @@
 
         button {
             padding: 5px;
-            border: 2px red solid;
+            border: none;
+            color: white;
+            background-color: rgb(0, 140, 255);
 
             &:hover {
-                background-color: rgba(255, 0, 0, 0.345);
+                background-color: rgba(0, 115, 255, 0.458);
                 color: white;
                 
             }
